@@ -1,3 +1,8 @@
+2000-06-24  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
+
+	* emacs/mhc-ps.el (mhc-ps/escape-bracket): New function.
+	(mhc-ps/schedule-to-string): Add code to handle subjects, which contains brackets.
+
 2000-06-23  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>
 
 	* emacs/mhc-compat.el (mhc-string-width): New function.
